[project]
name = "mcp-server-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "dotenv>=0.9.9",
    "fastmcp>=3.2.4",
    "loguru>=0.7.3",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "semgrep>=1.85.0",
]
